--- a/src/App.css
+++ b/src/App.css
@@ -1,38 +1,52 @@
-.App {
-  text-align: center;
-}
 
-.App-logo {
-  height: 40vmin;
-  pointer-events: none;
-}
-
-@media (prefers-reduced-motion: no-preference) {
-  .App-logo {
-    animation: App-logo-spin infinite 20s linear;
-  }
-}
-
-.App-header {
-  background-color: #282c34;
-  min-height: 100vh;
+.hero-div{
   display: flex;
-  flex-direction: column;
-  align-items: center;
+  top: 300px;
   justify-content: center;
-  font-size: calc(10px + 2vmin);
-  color: white;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
+  position: absolute;
+  z-index: 3;
 }
 
-.App-link {
-  color: #61dafb;
+@keyframes glow {
+  0% {
+    box-shadow: 0 0 400px 125px #445e8f;
+  }
+  50%{
+    box-shadow: 0 0 400px 175px #445e8f;
+  }
+  100%{
+    box-shadow: 0 0 400px 125px #445e8f;
+  }
 }
 
-@keyframes App-logo-spin {
-  from {
-    transform: rotate(0deg);
-  }
-  to {
-    transform: rotate(360deg);
-  }
+.glow-div {
+  width: 100vw;
+  position: absolute;
+  top: 580px;
+  box-shadow: 0 0 400px 150px #445e8f;
+  z-index: 1;
+  animation: glow 5s ease-in-out infinite;
 }
+
+.mountain-background-style {
+  width: 100vw;
+  height: 100vh;
+  position: absolute;
+  top: 300px;
+  max-width: 100%;
+  display: block;
+  object-fit: cover;
+  z-index: 2;
+}
+
+.star-background-style {
+  width: 100vw;
+  height: 100vh;
+  object-fit: cover;
+  position: absolute;
+  z-index: 0;
+}
+
