--- a/src/components/styles/AboutMePageStyle.css
+++ b/src/components/styles/AboutMePageStyle.css
@@ -1,10 +1,23 @@
 .background {
     z-index: 0;
+    position: absolute;
 }
 
 .forground {
     color: white;
-    position: absolute;
+    z-index: 1;
+    position: relative;
+}
+
+.profile-photo {
+    max-width: 20%;
+    display: flex;
+    border-radius: 200px;
+    justify-content: center;
+    border: 4px gray;
+    border-style: solid;
+    margin: auto; 
+    z-index: 1;
 }
 
 h1, h2, p {
