--- a/src/components/styles/AboutMePageStyle.css
+++ b/src/components/styles/AboutMePageStyle.css
@@ -1,6 +1,9 @@
 .background {
     z-index: 0;
     position: absolute;
+    background-color: black;
+    height: 100vh;
+    width: 100vw;
 }
 
 .forground {
